--- a/index.html
+++ b/index.html
@@ -5,5 +5,22 @@
   <link href="css/stylesheet.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
-  
+  <div class="content">
+    <div class="header">
+      <div class="logo">
+        <img src="images/lilian_vater.jpg" alt="Lilian Vater">
+      </div>
+
+        <nav>
+          <ul>
+            <li><a href="illustration.html">Illustration</a></li>
+            <li><a href="freiearbeiten.html">Freie Arbeiten</a></li>
+            <li><a href="anfragen.html">Anfragen</a></li>
+            <li><a href="uebermich.html">Über mich</a></li>
+            <li><a href="kontakt.html">Kontakt</a></li>
+          </ul>
+        </nav>
+    </div>
+    
+</body>
 </html>
