--- a/kontakt.html
+++ b/kontakt.html
@@ -5,7 +5,6 @@
   <link href="css/stylesheet.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
-  <div class="content">
     <div class="header">
       <div class="logo">
         <img src="images/lilian_vater.jpg" alt="Lilian Vater">
@@ -21,6 +20,18 @@
           </ul>
         </nav>
     </div>
+      <div class="content">
+        <p>Bei Anfragen und Anregungen melden Sie sich gerne jederzeit bei mir.</p>
+        
+        <h2>Adresse</h2>
+        <p>Lilian Vater<br>Rumeyplan 13<br>12101 Berlin</p>
+
+        <h2>E-Mail</h2>
+        <p>lilian.vater@gmail.com</p>
+
+        <h2>Telefon</h2>
+        <p>0170 5808103</p>
+      </div>
 
 </body>
 </html>
