--- a/freiearbeiten.html
+++ b/freiearbeiten.html
@@ -5,7 +5,7 @@
   <link href="css/stylesheet.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
-  <div class="content">
+
     <div class="header">
       <div class="logo">
         <img src="images/lilian_vater.jpg" alt="Lilian Vater">
@@ -20,6 +20,17 @@
             <li><a href="kontakt.html">Kontakt</a></li>
           </ul>
         </nav>
+    </div>
+    <div class="content">
+
+      <h2>Scherenschnitte</h2>
+      <p>Zu den Themen <i>Märchenheldinnen</i> und <i>Kindheitshelden</i> sind Scherenschritte aus farbigem Karton entstanden, von denen auch die Negative verwendet wurden um etwas Neues zu kreieren.</p>
+
+
+      <h2>Zuhause</h2>
+
+
+
     </div>
 
 </body>
