more textcontent plus haus image

--- a/anfragen.html
+++ b/anfragen.html
@@ -7,8 +7,8 @@
 <body>
 
     <div class="header">
-      
-        <img src="images/lilian_vater.jpg" alt="Lilian Vater">
+
+    <img src="images/lilian_vater.jpg" alt="Lilian Vater">
 
 
         <nav>
@@ -21,6 +21,16 @@
           </ul>
         </nav>
     </div>
+    <div class="content">
+      <p>Sie finden meine Arbeiten interessant und möchten meine Dienste in Anspruch nehmen? Sehr gern, melden Sie sich einfach bei mir. Hier noch ein paar Anregungen: </p>
 
+
+      <p><br><br>Ein T-Shirt, ein Beutel oder sonstiges Kleidungstück individuell bemalt oder bedruckt</p>
+
+
+      <p>Portrait - Zeichnungen oder - Malereien in verschieden Stilen und Techniken als ganz besonderes Geschenk</p>
+
+      <p>Diverse andere Auftragsarbeiten, von Leinwandgemälden bis Daumenkinos, von Logoentwürfen bis Postkarten</p>
+    </div>
 </body>
 </html>
