--- a/freiearbeiten.html
+++ b/freiearbeiten.html
@@ -7,8 +7,10 @@
 <body>
 
     <div class="header">
-      
+
+
         <img src="images/lilian_vater.jpg" alt="Lilian Vater">
+
 
 
         <nav>
@@ -28,8 +30,11 @@
 
 
       <h2>Zuhause</h2>
+      <p>Inspiriert durch das Bild <i>Empire of the Light</i> von Rene Magritte malte ich ein Acylbild von dem Haus, in dem ich aufgewachsen bin.</p>
 
-
+      <div class="bildhaus">
+        <img src="images/haus_magritte.jpg" width="100%" alt="Gutshaus wie Rene Magritte">
+      </div>
 
     </div>
 
