--- a/freiearbeiten.html
+++ b/freiearbeiten.html
@@ -28,12 +28,61 @@
       <h2>Scherenschnitte</h2>
       <p>Zu den Themen <i>Märchenheldinnen</i> und <i>Kindheitshelden</i> sind Scherenschritte aus farbigem Karton entstanden, von denen auch die Negative verwendet wurden um etwas Neues zu kreieren.</p>
 
+      <figure class="maerchen1">
+        <figure>
+          <img src="images/rapunzel_schnitt.jpg" width="100%" alt="Scherenschnitt Rapunzel">
+          <figcaption><i>Rapunzel I</i>, Farbkarton, 2017</figcaption>
+        </figure>
+
+        <figure>
+          <img src="images/siebenschoen_schnitt.jpg" width="100%" alt="Scherenschnitt Siebenschön">
+          <figcaption><i>Siebenschön I</i>, Farbkarton, 2017</figcaption>
+        </figure>
+
+      </figure>
+
+      <figure class="maerchen2">
+        <figure>
+          <img src="images/schwesterchen_schnitt.jpg" width="100%" alt="Scherenschnitt Brüderchen und Schwesterchen">
+          <figcaption><i>Brüderchen und Schwesterchen II</i>, Farbkarton auf Papier, 2017</figcaption>
+        </figure>
+
+        <figure>
+          <img src="images/bauerntochter_schnitt.jpg" width="100%" alt="Scherenschnitt Die kluge Bauertochter">
+          <figcaption><i>Die kluge Bauertochter II</i>, Farbkarton auf Papier, 2017</figcaption>
+        </figure>
+
+      </figure>
+
+      <figure class="schnittblau">
+        <figure class="einzelbild">
+          <img src="images/pippi_schnitt.JPG" width="100%" alt="Scherenschnitt Pippi Langstrumpf">
+          <figcaption><i>Pippi Langstrumpf</i>, Farbkarton auf Papier, 2015</figcaption>
+        </figure>
+
+        <figure class="einzelbild">
+          <img src="images/harry_schnitt.JPG" width="100%" alt="Scherenschnitt Harry Potter">
+          <figcaption><i>Harry Potter</i>, Farbkarton auf Papier, 2015</figcaption>
+        </figure>
+
+      </figure>
+
+      <figure class="schnittgrau">
+        <figure>
+          <img src="images/timstruppi_schnitt.JPG" width="100%" alt="Scherenschnitt Tim und Struppi">
+          <figcaption><i>Timm und Struppi</i>, Farbkarton auf Papier, 2015</figcaption>
+        </figure>
+
+      </figure>
 
       <h2>Zuhause</h2>
       <p>Inspiriert durch das Bild <i>Empire of the Light</i> von Rene Magritte malte ich ein Acylbild von dem Haus, in dem ich aufgewachsen bin.</p>
 
       <div class="bildhaus">
-        <img src="images/haus_magritte.jpg" width="100%" alt="Gutshaus wie Rene Magritte">
+        <figure>
+          <img src="images/haus_magritte.jpg" width="100%" alt="Gutshaus wie Rene Magritte">
+          <figcaption><i>Zuhause</i>, Acryl auf Leinwand, 2012</figcaption>
+        </figure>
       </div>
 
     </div>
