Bildereihe plus text illu

--- a/anfragen.html
+++ b/anfragen.html
@@ -25,12 +25,35 @@
       <p>Sie finden meine Arbeiten interessant und möchten meine Dienste in Anspruch nehmen? Sehr gern, melden Sie sich einfach bei mir. Hier noch ein paar Anregungen: </p>
 
 
-      <p><br><br>Ein T-Shirt, ein Beutel oder sonstiges Kleidungstück individuell bemalt oder bedruckt</p>
+      <p><br><br><br><br>Ein T-Shirt, ein Beutel oder sonstiges Kleidungstück individuell bemalt oder bedruckt</p>
 
+      <figure class="textil">
+        <figure>
+          <img src="images/welt_textil.JPG" width="100%" alt="T-Shirt Eine Welt">
+          <figcaption><i>Eine Welt</i>, T-Shirtdruck, 2015</figcaption>
+        </figure>
 
-      <p>Portrait - Zeichnungen oder - Malereien in verschieden Stilen und Techniken als ganz besonderes Geschenk</p>
+        <figure>
+          <img src="images/frosch_textil.jpg" width="100%" alt="Schürze Froschkönigin">
+          <figcaption><i>Froschkönigin</i>, Textilmarker auf Schürze, 2016</figcaption>
+        </figure>
 
-      <p>Diverse andere Auftragsarbeiten, von Leinwandgemälden bis Daumenkinos, von Logoentwürfen bis Postkarten</p>
+      </figure>
+
+      <p><br><br>Portrait-Zeichnungen oder -Malereien in verschieden Stilen und Techniken als ganz besonderes Geschenk</p>
+
+      <figure class="portrait">
+          <img src="images/portrait.jpg" width="100%" alt="Selbstportrait">
+          <figcaption><i>Selbstportrait</i>, Acryl auf Papier, 2015</figcaption>
+      </figure>
+
+      <p><br><br>Diverse andere Auftragsarbeiten, von Leinwandgemälden bis Daumenkinos, von Logoentwürfen bis Postkarten</p>
+
+      <figure class="tanzprojekt">
+          <img src="images/plakat_tanzprojekt.jpg" width="100%" alt="Plakat Tanzprojekt">
+          <figcaption><i>Tanz - Der Weg zu dir selbst</i>, Plakat, 2017</figcaption>
+      </figure>
+
     </div>
 </body>
 </html>
