--- a/freiearbeiten.html
+++ b/freiearbeiten.html
@@ -54,13 +54,15 @@
 
       </figure>
 
+        <hr>
+
       <figure class="schnittblau">
-        <figure class="einzelbild">
+        <figure class="einzelbild1">
           <img src="images/pippi_schnitt.JPG" width="100%" alt="Scherenschnitt Pippi Langstrumpf">
           <figcaption><i>Pippi Langstrumpf</i>, Farbkarton auf Papier, 2015</figcaption>
         </figure>
 
-        <figure class="einzelbild">
+        <figure class="einzelbild2">
           <img src="images/harry_schnitt.JPG" width="100%" alt="Scherenschnitt Harry Potter">
           <figcaption><i>Harry Potter</i>, Farbkarton auf Papier, 2015</figcaption>
         </figure>
@@ -78,12 +80,12 @@
       <h2>Zuhause</h2>
       <p>Inspiriert durch das Bild <i>Empire of the Light</i> von Rene Magritte malte ich ein Acylbild von dem Haus, in dem ich aufgewachsen bin.</p>
 
-      <div class="bildhaus">
+      <figure class="bildhaus">
         <figure>
           <img src="images/haus_magritte.jpg" width="100%" alt="Gutshaus wie Rene Magritte">
           <figcaption><i>Zuhause</i>, Acryl auf Leinwand, 2012</figcaption>
         </figure>
-      </div>
+      </figure>
 
     </div>
 
