--- a/uebermich.html
+++ b/uebermich.html
@@ -22,5 +22,19 @@
         </nav>
     </div>
 
+    <div class="content">
+
+      <h2>Alles Still, Alles Laut</h2>
+      <p>Der Verein <a href="schreibende-schueler.de"><b>Schreibende Schüler e.V.</b></a> fördert jüngste Literatur, also Kinder und Jugendliche beim Kreativen Schreiben. Im letzten Jahr hatte ich die Ehre, eine Illustration für ihre neuste Anthologie <i>alles still, alles laut</i> anzufertigen. Weitere Informationen finden Sie auf der Webseite des Vereins.</p>
+
+      <h2>Kindermusical</h2>
+      <p>Die Kreismusikschule Kon.centus in Neustrelitz inszinierte in der Vergangenheit mit Früherziehungskindern mehrere Musicalstücke im dortigen Landestheater. 2014 durfte ich das Plakat für die Inszeniering <i>Der kleine Kerl vom andern Stern</i> nach dem gleichnamigen Liederbilderbuch von Guido Lübeck unt Katrin Weiher gestalten.</p>
+
+      <h2>Eigenes</h2>
+      <p>Da ich neben meiner gestalterischen Arbeit auch viel schreibe, ist die Illustration meiner eigenen Texte schon immer ein fester Bestandteil dessen. Hier eine kleine Gedichtillustration.</p>
+
+  </div>
+
+
 </body>
 </html>
