--- a/illustration.html
+++ b/illustration.html
@@ -22,5 +22,33 @@
         </nav>
     </div>
 
+    <div class="content">
+
+      <h2>Alles Still, Alles Laut</h2>
+      <p>Der Verein <a href="schreibende-schueler.de"><b>Schreibende Schüler e.V.</b></a> fördert jüngste Literatur, also Kinder und Jugendliche beim Kreativen Schreiben. Im letzten Jahr hatte ich die Ehre, eine Illustration für ihre neuste Anthologie <i>alles still, alles laut</i> anzufertigen. Weitere Informationen finden Sie auf der Webseite des Vereins.</p>
+
+        <figure class="anthologie">
+            <img src="images/illustration_anthologie.jpg" width="100%" alt="Illustration Anthologie">
+            <figcaption><i>Alles</i>, Plakat, 2017</figcaption>
+        </figure>
+
+      <h2>Kindermusical</h2>
+      <p>Die Kreismusikschule Kon.centus in Neustrelitz inszinierte in der Vergangenheit mit Früherziehungskindern mehrere Musicalstücke im dortigen Landestheater. 2014 durfte ich das Plakat für die Inszeniering <i>Der kleine Kerl vom andern Stern</i> nach dem gleichnamigen Liederbilderbuch von Guido Lübeck unt Katrin Weiher gestalten.</p>
+
+        <figure class="tanzprojekt">
+            <img src="images/plakat_tanzprojekt.jpg" width="100%" alt="Plakat Tanzprojekt">
+            <figcaption><i>Tanz - Der Weg zu dir selbst</i>, Plakat, 2017</figcaption>
+        </figure>
+
+      <h2>Eigenes</h2>
+      <p>Da ich neben meiner gestalterischen Arbeit auch viel schreibe, ist die Illustration meiner eigenen Texte schon immer ein fester Bestandteil dessen. Hier eine kleine Gedichtillustration.</p>
+
+        <figure class="tanzprojekt">
+            <img src="images/plakat_tanzprojekt.jpg" width="100%" alt="Plakat Tanzprojekt">
+            <figcaption><i>Tanz - Der Weg zu dir selbst</i>, Plakat, 2017</figcaption>
+        </figure>
+
+  </div>
+
 </body>
 </html>
