--- a/illustration.html
+++ b/illustration.html
@@ -35,17 +35,17 @@
       <h2>Kindermusical</h2>
       <p>Die Kreismusikschule Kon.centus in Neustrelitz inszinierte in der Vergangenheit mit Früherziehungskindern mehrere Musicalstücke im dortigen Landestheater. 2014 durfte ich das Plakat für die Inszeniering <i>Der kleine Kerl vom andern Stern</i> nach dem gleichnamigen Liederbilderbuch von Guido Lübeck unt Katrin Weiher gestalten.</p>
 
-        <figure class="tanzprojekt">
-            <img src="images/plakat_tanzprojekt.jpg" width="100%" alt="Plakat Tanzprojekt">
-            <figcaption><i>Tanz - Der Weg zu dir selbst</i>, Plakat, 2017</figcaption>
+        <figure class="musikschule">
+            <img src="images/plakat_kleinerkerl.JPG" width="100%" alt="Plakat Kindermusical">
+            <figcaption><i>Der kleine Kerl vom anderen Stern</i>, Plakat, 2014</figcaption>
         </figure>
 
       <h2>Eigenes</h2>
       <p>Da ich neben meiner gestalterischen Arbeit auch viel schreibe, ist die Illustration meiner eigenen Texte schon immer ein fester Bestandteil dessen. Hier eine kleine Gedichtillustration.</p>
 
-        <figure class="tanzprojekt">
-            <img src="images/plakat_tanzprojekt.jpg" width="100%" alt="Plakat Tanzprojekt">
-            <figcaption><i>Tanz - Der Weg zu dir selbst</i>, Plakat, 2017</figcaption>
+        <figure class="gedicht">
+            <img src="images/komplementaer.jpg" width="100%" alt="Gedichtillustration">
+            <figcaption><i>Komplementär</i>, digitale Gedichtillustration, 2017</figcaption>
         </figure>
 
   </div>
