--- a/uebermich.html
+++ b/uebermich.html
@@ -24,14 +24,85 @@
 
     <div class="content">
 
-      <h2>Alles Still, Alles Laut</h2>
-      <p>Der Verein <a href="schreibende-schueler.de"><b>Schreibende Schüler e.V.</b></a> fördert jüngste Literatur, also Kinder und Jugendliche beim Kreativen Schreiben. Im letzten Jahr hatte ich die Ehre, eine Illustration für ihre neuste Anthologie <i>alles still, alles laut</i> anzufertigen. Weitere Informationen finden Sie auf der Webseite des Vereins.</p>
+      <figure class="ich">
+        <figure>
+          <img src="images/ich.JPG" width="100%" alt="Selbstportrait">
+          <figcaption><i>Ich</i>, Tusche auf Papier, 2017</figcaption>
+        </figure>
+      </figure>
 
-      <h2>Kindermusical</h2>
-      <p>Die Kreismusikschule Kon.centus in Neustrelitz inszinierte in der Vergangenheit mit Früherziehungskindern mehrere Musicalstücke im dortigen Landestheater. 2014 durfte ich das Plakat für die Inszeniering <i>Der kleine Kerl vom andern Stern</i> nach dem gleichnamigen Liederbilderbuch von Guido Lübeck unt Katrin Weiher gestalten.</p>
+      <h2>Leben</h2>
 
-      <h2>Eigenes</h2>
-      <p>Da ich neben meiner gestalterischen Arbeit auch viel schreibe, ist die Illustration meiner eigenen Texte schon immer ein fester Bestandteil dessen. Hier eine kleine Gedichtillustration.</p>
+      <table>
+        <tr>
+          <td class="datum" valign=top>April 2017:</td>
+          <td>Aktivitäten bei dem Verein <a href="https://schreibende-schueler.de/"><b>Schreibende Schüler e.V.</b></a></td>
+        </tr>
+        <tr>
+          <td class="datum" valign=top>Oktober 2016:</td>
+          <td>Beginn eines Kommunikationsdesign-Studiums an der HTW Berlin</td>
+        </tr>
+        <tr>
+          <td class="datum" valign=top>Juli 2015:</td>
+          <td>Allgemeine Hochschulreife am Gymnasium Carolinum Neustrelitz</td>
+        </tr>
+        <tr>
+          <td class="datum" valign=top>Oktober 2013:</td>
+          <td>Beginn der ehrenamtlichen Tätigkeit bei der gemeinnützigen Austauschorganisation <a href="https://www.yfu.de/"><b>YFU</b></a></td>
+        </tr>
+        <tr>
+          <td class="datum" valign=top>2012/2013:</td>
+          <td>Austauschjahr mit YFU in Estland</td>
+        </tr>
+        <tr>
+          <td class="datum" valign=top>August 2003:</td>
+          <td>Umzug aufs Land in die <a href="https://www.feldberger-seenlandschaft.de/"><b>Feldberger Seenlandschaft</b></a></td>
+        </tr>
+        <tr>
+          <td class="datum" valign=top>14.02.1996:</td>
+          <td>Geburt in Berlin</td>
+        </tr>
+      </table>
+
+
+      <h2>Interessen</h2>
+
+
+        <figure class="interessen">
+          <figure class="einzelbild3">
+            <img src="images/Malen_Icon.png" width="100%" alt="Malen">
+
+          </figure>
+
+          <figure class="einzelbild4">
+            <img src="images/buch_icon.png" width="100%" alt="Lesen">
+
+          </figure>
+
+          <figure class="einzelbild5">
+            <img src="images/Tanz_icon.png" width="100%" alt="Tanzen">
+
+          </figure>
+
+        </figure>
+
+        <figure class="interessen">
+          <figure class="einzelbild3">
+            <img src="images/Schreiben_icon.png" width="100%" alt="Schreiben">
+
+          </figure>
+
+          <figure class="einzelbild4">
+            <img src="images/welt_icon.png" width="100%" alt="Reisen">
+
+          </figure>
+
+          <figure class="einzelbild5">
+            <img src="images/kampfsport_icon.png" width="100%" alt="Kampfsport">
+            
+          </figure>
+
+        </figure>
 
   </div>
 
