--- a/uebermich.html
+++ b/uebermich.html
@@ -1,7 +1,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Webseite von Lilian Vater</title>
+  <title>Lilian Vater/Über mich</title>
   <link href="css/stylesheet.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
@@ -99,7 +99,7 @@
 
           <figure class="einzelbild5">
             <img src="images/kampfsport_icon.png" width="100%" alt="Kampfsport">
-            
+
           </figure>
 
         </figure>
