--- a/freiearbeiten.html
+++ b/freiearbeiten.html
@@ -1,7 +1,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Webseite von Lilian Vater</title>
+  <title>Lilian Vater/Freie Arbeiten</title>
   <link href="css/stylesheet.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
@@ -54,7 +54,7 @@
 
       </figure>
 
-      
+
 
       <figure class="schnittblau">
         <figure class="einzelbild1">
