--- a/kontakt.html
+++ b/kontakt.html
@@ -1,7 +1,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Webseite von Lilian Vater</title>
+  <title>Lilian Vater/Kontakt</title>
   <link href="css/stylesheet.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
