--- a/freiearbeiten.html
+++ b/freiearbeiten.html
@@ -13,7 +13,7 @@
 
 
 
-        <nav>
+        <nav class="fixedsticky">
           <ul>
             <li><a href="illustration.html">Illustration</a></li>
             <li><a href="freiearbeiten.html">Freie Arbeiten</a></li>
