--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <img src="images/lilian_vater.jpg" alt="Lilian Vater">
 
 
-        <nav>
+        <nav class="fixedsticky">
           <ul>
             <li><a href="illustration.html">Illustration</a></li>
             <li><a href="freiearbeiten.html">Freie Arbeiten</a></li>
