--- a/anfragen.html
+++ b/anfragen.html
@@ -8,7 +8,9 @@
 
     <div class="header">
 
-    <img src="images/lilian_vater.jpg" alt="Lilian Vater">
+      <figure class="logo">
+        <img src="images/lilian_vater.jpg" width=100% alt="Lilian Vater">
+      </figure>
 
 
         <nav class="fixedsticky">
