--- a/freiearbeiten.html
+++ b/freiearbeiten.html
@@ -9,7 +9,9 @@
     <div class="header">
 
 
-        <img src="images/lilian_vater.jpg" alt="Lilian Vater">
+      <figure class="logo">
+        <img src="images/lilian_vater.jpg" width=100% alt="Lilian Vater">
+      </figure>
 
 
 
@@ -49,7 +51,7 @@
 
         <figure>
           <img src="images/bauerntochter_schnitt.jpg" width="100%" alt="Scherenschnitt Die kluge Bauertochter">
-          <figcaption><i>Die kluge Bauertochter II</i>, Farbkarton auf Papier, 2017</figcaption>
+          <figcaption><i>Die kluge Bauerntochter II</i>, Farbkarton auf Papier, 2017</figcaption>
         </figure>
 
       </figure>
@@ -72,7 +74,7 @@
       <figure class="schnittgrau">
         <figure>
           <img src="images/timstruppi_schnitt.JPG" width="100%" alt="Scherenschnitt Tim und Struppi">
-          <figcaption><i>Timm und Struppi</i>, Farbkarton auf Papier, 2015</figcaption>
+          <figcaption><i>Tim und Struppi</i>, Farbkarton auf Papier, 2015</figcaption>
         </figure>
 
       </figure>
