--- a/illustration.html
+++ b/illustration.html
@@ -8,7 +8,9 @@
 
     <div class="header">
 
-      <img src="images/lilian_vater.jpg" alt="Lilian Vater">
+      <figure class="logo">
+        <img src="images/lilian_vater.jpg" width=100% alt="Lilian Vater">
+      </figure>
 
 
         <nav class="fixedsticky">
@@ -25,15 +27,15 @@
     <div class="content">
 
       <h2>Alles Still, Alles Laut</h2>
-      <p>Der Verein <a href="https://schreibende-schueler.de/"><b>Schreibende Schüler e.V.</b></a> fördert jüngste Literatur, also Kinder und Jugendliche beim Kreativen Schreiben. Im letzten Jahr hatte ich die Ehre, eine Illustration für ihre neuste Anthologie <i>alles still, alles laut</i> anzufertigen. Weitere Informationen finden Sie auf der Webseite des Vereins.</p>
+      <p>Der Verein <a href="http://schreibende-schueler.de"><b>Schreibende Schüler e.V.</b></a> fördert jüngste Literatur, also Kinder und Jugendliche beim Kreativen Schreiben. Im letzten Jahr hatte ich die Ehre, eine Illustration für ihre neuste Anthologie <i>alles still, alles laut</i> anfertigen zu dürfen. Weitere Informationen finden Sie auf der Webseite des Vereins.</p>
 
         <figure class="anthologie">
             <img src="images/illustration_anthologie.jpg" width="100%" alt="Illustration Anthologie">
-            <figcaption><i>Alles</i>, Plakat, 2017</figcaption>
+            <figcaption><i>alles still, alles laut</i>, Tusche auf Papier, 2016</figcaption>
         </figure>
 
       <h2>Kindermusical</h2>
-      <p>Die Kreismusikschule Kon.centus in Neustrelitz inszinierte in der Vergangenheit mit Früherziehungskindern mehrere Musicalstücke im dortigen Landestheater. 2014 durfte ich das Plakat für die Inszeniering <i>Der kleine Kerl vom andern Stern</i> nach dem gleichnamigen Liederbilderbuch von Guido Lübeck unt Katrin Weiher gestalten.</p>
+      <p>Die Kreismusikschule Kon.centus in Neustrelitz inszinierte in der Vergangenheit mit Früherziehungskindern mehrere Musicalstücke im dortigen Landestheater. 2014 durfte ich das Plakat für die Inszeniering <i>Der kleine Kerl vom anderen Stern</i> nach dem gleichnamigen Liederbilderbuch von Guido Lübeck unt Katrin Weiher gestalten.</p>
 
         <figure class="musikschule">
             <img src="images/plakat_kleinerkerl.JPG" width="100%" alt="Plakat Kindermusical">
