--- a/kontakt.html
+++ b/kontakt.html
@@ -7,7 +7,9 @@
 <body>
     <div class="header">
 
-    <img src="images/lilian_vater.jpg" alt="Lilian Vater">
+      <figure class="logo">
+        <img src="images/lilian_vater.jpg" width=100% alt="Lilian Vater">
+      </figure>
 
 
         <nav class="fixedsticky">
@@ -31,6 +33,8 @@
 
         <h2>Telefon</h2>
         <p>0170 5808103</p>
+
+        <p><br><br><br><br>Urheberrecht: Jegliches Verwenden der Bilder dieser Webseite ist ohne ausdrückliche Genehmigung der Autorin nicht gestattet.</p>
       </div>
 
 </body>
