--- a/uebermich.html
+++ b/uebermich.html
@@ -8,7 +8,9 @@
 
     <div class="header">
 
-      <img src="images/lilian_vater.jpg" alt="Lilian Vater">
+      <figure class="logo">
+        <img src="images/lilian_vater.jpg" width=100% alt="Lilian Vater">
+      </figure>
 
 
         <nav class="fixedsticky">
@@ -36,7 +38,7 @@
       <table>
         <tr>
           <td class="datum" valign=top>April 2017:</td>
-          <td>Aktivitäten bei dem Verein <a href="https://schreibende-schueler.de/"><b>Schreibende Schüler e.V.</b></a></td>
+          <td>Aktivitäten bei dem Verein <a href="http://schreibende-schueler.de"><b>Schreibende Schüler e.V.</b></a></td>
         </tr>
         <tr>
           <td class="datum" valign=top>Oktober 2016:</td>
