--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 <body>
 
     <div class="header">
-
-    <img src="images/lilian_vater.jpg" alt="Lilian Vater">
-
+      <figure class="logo">
+        <img src="images/lilian_vater.jpg" width=100% alt="Lilian Vater">
+      </figure>
 
         <nav class="fixedsticky">
           <ul>
