--- a/anfragen.html
+++ b/anfragen.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 
-    <div class="header">
+    <header>
 
       <figure class="logo">
         <img src="images/lilian_vater.jpg" width=100% alt="Lilian Vater">
@@ -22,7 +22,8 @@
             <li><a href="kontakt.html">Kontakt</a></li>
           </ul>
         </nav>
-    </div>
+    </header>
+
     <div class="content">
       <p>Sie finden meine Arbeiten interessant und möchten meine Dienste in Anspruch nehmen? Sehr gern, melden Sie sich einfach bei mir. Hier noch ein paar Anregungen: </p>
 
