--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 
-    <div class="header">
+    <header>
       <figure class="logo">
         <img src="images/lilian_vater.jpg" width=100% alt="Lilian Vater">
       </figure>
@@ -20,7 +20,7 @@
             <li><a href="kontakt.html">Kontakt</a></li>
           </ul>
         </nav>
-    </div>
+    </header>
 
 </body>
 </html>
