--- a/kontakt.html
+++ b/kontakt.html
@@ -5,7 +5,7 @@
   <link href="css/stylesheet.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
-    <div class="header">
+    <header>
 
       <figure class="logo">
         <img src="images/lilian_vater.jpg" width=100% alt="Lilian Vater">
@@ -21,7 +21,8 @@
             <li><a href="kontakt.html">Kontakt</a></li>
           </ul>
         </nav>
-    </div>
+    </header>
+
       <div class="content">
         <p>Bei Anfragen und Anregungen melden Sie sich gerne jederzeit bei mir.</p>
 
