--- a/freiearbeiten.html
+++ b/freiearbeiten.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 
-    <div class="header">
+    <header>
 
 
       <figure class="logo">
@@ -24,7 +24,7 @@
             <li><a href="kontakt.html">Kontakt</a></li>
           </ul>
         </nav>
-    </div>
+    </header>
     <div class="content">
 
       <h2>Scherenschnitte</h2>
