--- a/uebermich.html
+++ b/uebermich.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 
-    <div class="header">
+    <header>
 
       <figure class="logo">
         <img src="images/lilian_vater.jpg" width=100% alt="Lilian Vater">
@@ -22,7 +22,7 @@
             <li><a href="kontakt.html">Kontakt</a></li>
           </ul>
         </nav>
-    </div>
+    </header>
 
     <div class="content">
 
